update slides and exercises

--- a/exercises/day1/Day_1_Exercise_3.ipynb
+++ b/exercises/day1/Day_1_Exercise_3.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notebook 3"
+    "## Day 1 - Exercise 3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## For loops\n"
+    "### For loops\n"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## While loops"
+    "### While loops"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Answers\n",
+    "## Answers\n",
     "\n",
     "### For loops"
    ]
