--- a/exercises/day1/Day_1_Exercise_3.ipynb
+++ b/exercises/day1/Day_1_Exercise_3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 1 - Exercise 3"
+    "## Day 1,  Exercise 3 - Loops"
    ]
   },
   {
