--- a/exercises/day1/Day_1_Exercise_2.ipynb
+++ b/exercises/day1/Day_1_Exercise_2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook 2\n",
+    "# Day 1, Exercise 2 - Operations\n",
     "\n",
     "Run each command and try to understand why certain operations behave the way they do before looking at the answers.\n",
     "\n",
