--- a/exercises/day1/Day_1_Exercise_4.ipynb
+++ b/exercises/day1/Day_1_Exercise_4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notebook 4"
+    "## Day 1, Exercise 4 - Conditional statement"
    ]
   },
   {
