--- a/lectures/Day_5.ipynb
+++ b/lectures/Day_5.ipynb
@@ -37,7 +37,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Day 5\n",
     "\n",
@@ -2812,24 +2816,22 @@
     }
    },
    "source": [
-    "### Exercise 1 (~30 minutes)\n",
-    "\n",
-    "- Go to Canvas, `Modules -> Day 4 -> Exercise 2 - day 4` \n",
+    "## Take a break\n",
+    "## Day 5, Exercise 1 (~30 minutes)\n",
+    "https://python-bioinfo.bioshu.se/exercises/day5/Day_1_Exercise_1.html\n",
     "\n",
     "- **Easy**:\n",
     "    - Explore the `Orange_1.tsv`\n",
     "\n",
     "- **Medium/hard**:\n",
-    "    - Use Pandas to read IMDB\n",
+    "    - Use Pandas to read VCF file\n",
     "    - Explore it by making graphs\n",
     "    \n",
     "- **Extra exercises**:\n",
     "    - Read the pandas documentation :)\n",
     "    - Start exploring your own data\n",
     "\n",
-    "After exercise, do Quiz 4.2 and then take a break\n",
-    "\n",
-    "After break, working on the project\n"
+    "\n"
    ]
   },
   {
@@ -2872,6 +2874,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.0"
+  },
+  "rise": {
+   "height": 1000,
+   "scroll": true,
+   "width": 1280
   }
  },
  "nbformat": 4,
