--- a/lectures/Day_2.ipynb
+++ b/lectures/Day_2.ipynb
@@ -81,7 +81,17 @@
     }
    },
    "source": [
-    "## Review of Day 1"
+    "## Review of Day 1\n",
+    "\n",
+    "- Liternals and their associated data types, variables, and basic operations\n",
+    "    - Numeric, String, Boolean, None\n",
+    "    - Collection of data types: List, Tuple, Set and Dictionary\n",
+    "    - Naming convention of variables\n",
+    "- Built-in functions and operations\n",
+    "    - print, len, max, sum \n",
+    "- Loops\n",
+    "    - `for` loop and `while` loop\n",
+    "- How to use if/elif/else statements to control the logic of the code"
    ]
   },
   {
@@ -92,7 +102,7 @@
     }
    },
    "source": [
-    "Note: ake a look at the result of quiz"
+    "## Review of Quiz from yesterday"
    ]
   },
   {
