--- a/lectures/Day_4.ipynb
+++ b/lectures/Day_4.ipynb
@@ -37,17 +37,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "Start by doing today's quiz\n",
-    "\n",
-    "Go to Canvas, `Modules -> Day 4 -> Review Day 3`\n",
-    " \n",
-    "~20 minutes\n"
+    "## Review of Day 3\n",
+    "- Functions and methods\n",
+    "  - `functionName()`\n",
+    "  - `object.functionName()`\n",
+    "- How to write your own functions\n",
+    "- How to write a script taking arguments from the command line\n",
+    "  - outcome: a software that can be reused by others\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Review of quiz from yesterday"
    ]
   },
   {
@@ -2127,6 +2133,24 @@
     "\n",
     "https://www.python.org/dev/peps/pep-0008/?#comments"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Introduction to Biopython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
