--- a/lectures/Day_3.ipynb
+++ b/lectures/Day_3.ipynb
@@ -42,7 +42,25 @@
     }
    },
    "source": [
-    "## Review of Day 2"
+    "## Review of Day 2\n",
+    "\n",
+    "- How to put you code in a Python script and how to run the Python script\n",
+    "  - File extension: `.py`\n",
+    "  - Run in the command line with `python myscript.py` or `./myscript.py`\n",
+    "- How to read and write files\n",
+    "- Practised file processing and data maniputation with a VCF file \n",
+    "- Introduced the course project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Review of quiz from yesterday"
    ]
   },
   {
@@ -264,12 +282,14 @@
    "source": [
     "## Day 3\n",
     "\n",
-    "- Session 1\n",
+    "- __Session 1__\n",
     "    - Functions and methods\n",
-    "- Session 2    \n",
+    "    - Difference of functions and methods\n",
+    "    - Introduction to some useful functions and methods\n",
+    "- __Session 2__    \n",
     "    - How to write you own functions\n",
-    "    - sys.argv - how to pass arguments from command line\n",
-    "    - Formatting"
+    "    - How to pass arguments from command line using `sys.argv`\n",
+    "    - String formatting"
    ]
   },
   {
@@ -299,35 +319,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "```python\n",
+    "def function_name(parameters):\n",
+    "    # Block of code\n",
+    "    return result\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Python\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello Python\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
    "source": [
-    "len(\"ACCCCTTGAACCCC\")"
+    "length = len(\"ACCCCTTGAACCCC\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -339,29 +393,13 @@
        "147"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "max([87, 131, 69, 112, 147, 55, 68, 130, 119, 50])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### You can also define your own function\n",
-    "```python\n",
-    "def function_name(parameters):\n",
-    "    # Block of code\n",
-    "    return result\n",
-    "```"
    ]
   },
   {
@@ -418,7 +456,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -438,7 +478,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -466,11 +508,11 @@
     "\n",
     "### What is the difference between a `function` and a `method`?\n",
     "\n",
-    "A `method` always belongs to an object of a specific class, a `function` does not have to. For example:\n",
+    "- A `method` always belongs to an object of a specific class, a `function` does not have to. For example:\n",
     "\n",
-    "`print('a string')` and `print(42)` both works, even though one is a string and one is an integer\n",
+    "    - `print('a string')` and `print(42)` both works, even though one is a string and one is an integer\n",
     "\n",
-    "`'a string '.strip()` works, but `[1,2,3,4].strip()` does not work. `strip()` is a method that only works on strings\n"
+    "    - `'a string '.strip()` works, but `[1,2,3,4].strip()` does not work. `strip()` is a method that only works on strings\n"
    ]
   },
   {
@@ -481,9 +523,9 @@
     }
    },
    "source": [
-    "__What does it matter to me?__\n",
+    "### What does it matter to me?\n",
     "\n",
-    "For now, you mostly need to be aware of the difference, and know the different syntaxes:\n",
+    "For now, you only need to know the different syntaxes of using a function and a method:\n",
     "\n",
     "__A function:__  \n",
     "`functionName()`\n",
@@ -500,7 +542,8 @@
     }
    },
    "source": [
-    "## Introduction to some useful build-in functions"
+    "### Introduction to some useful functions\n",
+    "[Python Built-in functions](https://docs.python.org/3/library/functions.html#)"
    ]
   },
   {
@@ -518,11 +561,38 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "[Python Built-in functions](https://docs.python.org/3/library/functions.html#)"
+    "### `help`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function max in module builtins:\n",
+      "\n",
+      "max(...)\n",
+      "    max(iterable, *[, default=obj, key=func]) -> value\n",
+      "    max(arg1, arg2, *args, *[, key=func]) -> value\n",
+      "    \n",
+      "    With a single iterable argument, return its biggest item. The\n",
+      "    default keyword-only argument specifies an object to return if\n",
+      "    the provided iterable is empty.\n",
+      "    With two or more arguments, return the largest argument.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(max)"
    ]
   },
   {
@@ -533,13 +603,14 @@
     }
    },
    "source": [
-    "<img src=\"img/built-in_functions_int.png\" alt=\"Drawing\" style=\"width: 800px;\"/> "
+    "### `range`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 42,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -563,78 +634,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "<img src=\"img/built-in_functions_list.png\" alt=\"Drawing\" style=\"width: 800px;\"/> "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 45,
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "153"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
     }
    ],
    "source": [
-    "# Functions taking iterables as input\n",
-    "sum([1,2,35,23,88,4])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "### From Python documentation\n",
-    "\n",
-    "<br></br>\n",
-    "\n",
-    "<img src=\"img/sum_function.png\" alt=\"Drawing\" style=\"width: 800px;\"/> "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum([1,2,3,4], 10)"
+    "# range(start, stop, step)\n",
+    "for i in range(1, 10, 2):\n",
+    "    print(i)"
    ]
   },
   {
@@ -645,12 +668,12 @@
     }
    },
    "source": [
-    "<img src=\"img/built-in_functions_misc.png\" alt=\"Drawing\" style=\"width: 800px;\"/> "
+    "### `sorted`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 46,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -658,19 +681,177 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4, 5, 10, 13, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li = [5, 4, 1, 3, 10, 13, 13]\n",
+    "print(sorted(li))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13, 13, 10, 5, 4, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sorted(li, reverse=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### `dir`: return a list of names comprising the attributes of the given objet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "int"
+       "['In',\n",
+       " 'Out',\n",
+       " '_',\n",
+       " '_1',\n",
+       " '_10',\n",
+       " '_11',\n",
+       " '_12',\n",
+       " '_15',\n",
+       " '_17',\n",
+       " '_18',\n",
+       " '_19',\n",
+       " '_2',\n",
+       " '_20',\n",
+       " '_21',\n",
+       " '_23',\n",
+       " '_25',\n",
+       " '_3',\n",
+       " '_4',\n",
+       " '_48',\n",
+       " '_5',\n",
+       " '_50',\n",
+       " '_52',\n",
+       " '_6',\n",
+       " '_7',\n",
+       " '_8',\n",
+       " '_9',\n",
+       " '__',\n",
+       " '___',\n",
+       " '__builtin__',\n",
+       " '__builtins__',\n",
+       " '__doc__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '_dh',\n",
+       " '_i',\n",
+       " '_i1',\n",
+       " '_i10',\n",
+       " '_i11',\n",
+       " '_i12',\n",
+       " '_i13',\n",
+       " '_i14',\n",
+       " '_i15',\n",
+       " '_i16',\n",
+       " '_i17',\n",
+       " '_i18',\n",
+       " '_i19',\n",
+       " '_i2',\n",
+       " '_i20',\n",
+       " '_i21',\n",
+       " '_i22',\n",
+       " '_i23',\n",
+       " '_i24',\n",
+       " '_i25',\n",
+       " '_i26',\n",
+       " '_i27',\n",
+       " '_i28',\n",
+       " '_i29',\n",
+       " '_i3',\n",
+       " '_i30',\n",
+       " '_i31',\n",
+       " '_i32',\n",
+       " '_i33',\n",
+       " '_i34',\n",
+       " '_i35',\n",
+       " '_i36',\n",
+       " '_i37',\n",
+       " '_i38',\n",
+       " '_i39',\n",
+       " '_i4',\n",
+       " '_i40',\n",
+       " '_i41',\n",
+       " '_i42',\n",
+       " '_i43',\n",
+       " '_i44',\n",
+       " '_i45',\n",
+       " '_i46',\n",
+       " '_i47',\n",
+       " '_i48',\n",
+       " '_i49',\n",
+       " '_i5',\n",
+       " '_i50',\n",
+       " '_i51',\n",
+       " '_i52',\n",
+       " '_i53',\n",
+       " '_i6',\n",
+       " '_i7',\n",
+       " '_i8',\n",
+       " '_i9',\n",
+       " '_ih',\n",
+       " '_ii',\n",
+       " '_iii',\n",
+       " '_oh',\n",
+       " 'atexit',\n",
+       " 'exit',\n",
+       " 'get_ipython',\n",
+       " 'historyPath',\n",
+       " 'i',\n",
+       " 'length',\n",
+       " 'li',\n",
+       " 'open',\n",
+       " 'os',\n",
+       " 'quit',\n",
+       " 'readline',\n",
+       " 'rlcompleter',\n",
+       " 'save_history',\n",
+       " 'sys']"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(3.234556, 3)\n",
-    "type(4)"
+    "dir()"
    ]
   },
   {
@@ -1207,8 +1388,6 @@
    "source": [
     "## Summary\n",
     "\n",
-    "- Tuples are immutable sequences of objects\n",
-    "- Always plan your approach before you start coding\n",
     "- A method always belongs to an object of a specific class, a function does not have to\n",
     "- The official Python documentation describes the syntax for all built-in functions and methods\n",
     "  - https://docs.python.org/3.9/"
@@ -1917,9 +2096,9 @@
    "version": "3.11.0"
   },
   "rise": {
-   "height": 1024,
+   "height": 1000,
    "scroll": true,
-   "width": 1024
+   "width": 1280
   }
  },
  "nbformat": 4,
