--- a/lectures/Day_3.ipynb
+++ b/lectures/Day_3.ipynb
@@ -1645,33 +1645,185 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
-    "## Functions"
+    "Note: when we are talking about the conditional statement, we have showned this example\n",
+    "The program check whether a genotype is active or not by comparing it to the target variant, and if true, further check if the phenotype is \"expressed\" or not, \n",
+    "\n",
+    "The outcome will be determine the status of the variant. \n",
+    "\n",
+    "If I want to check for another genotype or phenotype, I have to change the value in the code\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variant A is a non-target variant.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use nested conditionals to categorize genetic variants based on multiple attributes.\n",
+    "genotype = \"AG\"\n",
+    "phenotype = \"expressed\"\n",
+    "if genotype == \"AG\":\n",
+    "    # Only check phenotype if genotype is \"AG\"\n",
+    "    if phenotype == \"expressed\":\n",
+    "        print(\"Variant \" + genotype + \" is active and expressed.\")\n",
+    "    else:\n",
+    "        print(\"Variant \" + genotype + \" is active but not expressed.\")\n",
+    "else:\n",
+    "    print(\"Variant \" + genotype + \" is a non-target variant.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "<img src=\"img/for_function.png\" alt=\"Drawing\" style=\"width: 900px;\"/>  "
+    "#### Syntax of function\n",
+    "```python\n",
+    "def function_name(arg1, arg2, ...):\n",
+    "    # Block of code\n",
+    "    return result\n",
+    "```"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variant AG is active and expressed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_geno_pheno(genotype, phenotype):\n",
+    "    if genotype == \"AG\":\n",
+    "        # Only check phenotype if genotype is \"AG\"\n",
+    "        if phenotype == \"expressed\":\n",
+    "            print(\"Variant \" + genotype + \" is active and expressed.\")\n",
+    "        else:\n",
+    "            print(\"Variant \" + genotype + \" is active but not expressed.\")\n",
+    "    else:\n",
+    "        print(\"Variant \" + genotype + \" is a non-target variant.\")\n",
+    "    \n",
+    "check_geno_pheno(\"AG\", \"expressed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variant A is a non-target variant.\n",
+      "Variant AC is a non-target variant.\n"
+     ]
+    }
+   ],
    "source": [
-    "A lot of ugly formatting for calculating hours and minutes from seconds..."
+    "check_geno_pheno(\"A\", \"expressed\")\n",
+    "check_geno_pheno(\"AC\", \"nonexpressed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note the return statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Syntax of function\n",
+    "```python\n",
+    "def function_name(arg1, arg2, ...):\n",
+    "    # Block of code\n",
+    "    return result\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variant A is a non-target variant.\n",
+      "result =  None\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = check_geno_pheno(\"A\", \"expressed\")\n",
+    "print(\"result = \", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# redefine the function so that it return a meaningful value\n",
+    "def check_geno_pheno(genotype, phenotype):\n",
+    "    result = \"\"\n",
+    "    if genotype == \"AG\":\n",
+    "        # Only check phenotype if genotype is \"AG\"\n",
+    "        if phenotype == \"expressed\":\n",
+    "            result = \"Variant \" + genotype + \" is active and expressed.\"\n",
+    "        else:\n",
+    "            result = \"Variant \" + genotype + \" is active but not expressed.\"\n",
+    "    else:\n",
+    "        result = \"Variant \" + genotype + \" is a non-target variant.\"\n",
+    "    \n",
+    "    return result\n",
+    "# live coding"
    ]
   },
   {
@@ -1684,188 +1836,61 @@
    },
    "outputs": [],
    "source": [
-    "def FormatSec(genre):   # input a list of seconds\n",
-    "    average   = sum(genreDict[genre])/len(genreDict[genre])\n",
-    "    hours     = int(average/3600)\n",
-    "    minutes   = (average - (3600*hours))/60   \n",
-    "    return str(hours)+'h'+str(round(minutes))+'min'\n",
-    "\n",
-    "\n",
-    "fh        = open('../downloads/250.imdb', 'r', encoding = 'utf-8')\n",
-    "genreDict = {}\n",
-    "\n",
-    "for line in fh:\n",
-    "    if not line.startswith('#'):\n",
-    "        cols    = line.strip().split('|')\n",
-    "        genre   = cols[5].strip()\n",
-    "        glist   = genre.split(',')\n",
-    "        runtime = cols[3]      # length of movie in seconds\n",
-    "        for entry in glist:\n",
-    "            if not entry.lower() in genreDict:\n",
-    "                genreDict[entry.lower()] = [int(runtime)]   # add a list with the runtime\n",
-    "            else:\n",
-    "                genreDict[entry.lower()].append(int(runtime))   # append runtime to existing list\n",
-    "fh.close()\n",
-    "                \n",
-    "for genre in genreDict:\n",
-    "    print('The average length for movies in genre '+genre\\\n",
-    "          +' is '+FormatSec(genre))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Function structure\n",
-    "\n",
-    "<img src=\"img/function_structure.png\" alt=\"Drawing\" style=\"width: 800px;\"/>  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Function structure\n",
-    "\n",
-    "<img src=\"img/function_structure_explained.png\" alt=\"Drawing\" style=\"width: 800px;\"/>  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def addFive(number):\n",
-    "    print(number)\n",
-    "    final = number + 5\n",
-    "    return final\n",
-    "\n",
-    "my_result = addFive(4)\n",
-    "my_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The time is: 13:11:13.671880'"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "def whatTimeIsIt():\n",
-    "    time = 'The time is: ' + str(datetime.now().time())\n",
-    "    return time\n",
-    "\n",
-    "whatTimeIsIt()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
-    "def addFive(number):\n",
-    "    final = number + 5\n",
-    "    return final\n",
-    "\n",
-    "#addFive(4)\n",
-    "\n",
-    "res = addFive(4)\n",
-    "print(final)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Scope \n",
-    "\n",
-    "- Variables within functions\n",
-    "- Global variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "def someFunction(input_value):\n",
-    "    res = input_value + 4\n",
-    "    return res\n",
+    "# redefine the function so that it return a meaningful value\n",
+    "def check_geno_pheno(genotype, phenotype):\n",
+    "    if genotype == \"AG\":\n",
+    "        # Only check phenotype if genotype is \"AG\"\n",
+    "        if phenotype == \"expressed\":\n",
+    "            print(\"Variant \" + genotype + \" is active and expressed.\")\n",
+    "        else:\n",
+    "            print(\"Variant \" + genotype + \" is active but not expressed.\")\n",
+    "    else:\n",
+    "        print(\"Variant \" + genotype + \" is a non-target variant.\")\n",
     "    \n",
-    "\n",
-    "#print(s)\n",
-    "#someFunction(a)\n",
-    "#print(a)"
+    "check_geno_pheno(\"AG\", \"expressed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result =  Variant A is a non-target variant.\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = check_geno_pheno(\"A\", \"expressed\")\n",
+    "print(\"result = \", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result 1 =  Variant AG is active and expressed.\n",
+      "result 2 =  Variant A is a non-target variant.\n"
+     ]
+    }
+   ],
+   "source": [
+    "r1 = check_geno_pheno(\"AG\", \"expressed\")\n",
+    "r2 = check_geno_pheno(\"A\", \"expressed\")\n",
+    "print(\"result 1 = \", r1)\n",
+    "print(\"result 2 = \", r2)"
    ]
   },
   {
@@ -1892,98 +1917,11 @@
     }
    },
    "source": [
-    "## Importing functions\n",
+    "### 5 min exercise\n",
     "\n",
-    "- Collect all your functions in another file\n",
-    "- Keeps main code cleaner\n",
-    "- Easy to use across different code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Example:\n",
-    "1. Create a file called myFunctions.py, located in the same folder as your script\n",
-    "2. Put a function called `formatSec()` in the file\n",
-    "3. Start writing your code in a separate file and `import` the function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'8h56min'"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from myFunctions import formatSec\n",
-    "\n",
-    "seconds = 32154\n",
-    "\n",
-    "formatSec(seconds)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5h53min\n",
-      "79005s\n"
-     ]
-    }
-   ],
-   "source": [
-    "from myFunctions import  formatSec, toSec\n",
-    "\n",
-    "seconds = 21154\n",
-    "print(formatSec(seconds))\n",
-    "\n",
-    "days    = 0\n",
-    "hours   = 21\n",
-    "minutes = 56\n",
-    "seconds = 45\n",
-    "\n",
-    "print(toSec(days, hours, minutes, seconds))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### myFunctions.py\n",
-    "\n",
-    "<img src=\"img/myFunctions.png\" alt=\"Drawing\" style=\"width: 600px;\"/>  "
+    "Write a function that calculate the length of sequence\n",
+    "- input parameter: sequence (string)\n",
+    "- reutrn: length"
    ]
   },
   {
@@ -2058,33 +1996,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "<img src=\"img/argv_print_output.png\" alt=\"Drawing\" style=\"width: 800px;\"/> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
     "Instead of:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "<img src=\"img/non-sysargv.png\" alt=\"Drawing\" style=\"width: 700px;\"/>  "
    ]
   },
   {
@@ -2106,29 +2022,7 @@
     }
    },
    "source": [
-    "<img src=\"img/sysargv.png\" alt=\"Drawing\" style=\"width: 800px;\"/>  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
     "Run with:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "<img src=\"img/sysargv_run.png\" alt=\"Drawing\" style=\"width: 900px;\"/>  "
    ]
   },
   {
@@ -2139,7 +2033,7 @@
     }
    },
    "source": [
-    "## Formatting\n",
+    "## String formatting\n",
     "\n",
     "Format text for printing or for writing to file.\n",
     "\n",
@@ -2241,47 +2135,6 @@
     "title  = 'Toy Story'\n",
     "rating = 10\n",
     "print('The result is: %s with rating: %s' % (title, rating))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### IMDb - Pair-programming exercise\n",
-    "\n",
-    "__How would you re-structure and write the output to a new file as below?__\n",
-    "\n",
-    "<img src=\"img/re-structured.png\" alt=\"Drawing\" style=\"width: 400px;\"/>  \n",
-    "\n",
-    "Normal level:  \n",
-    "- Write pseudocode for how you would do this\n",
-    "\n",
-    "Normal+ level:\n",
-    "- Write a script that takes the file as input on the command line and writes a new file with one line per movie:\n",
-    "\"The movie \\<movie\\> has the rating \\<rating\\>\"\n",
-    "\n",
-    "\n",
-    "Insane level (danger zone!):  \n",
-    "- Write the code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "### Answer -  Example\n",
-    "<img src=\"img/reformat_imdb.png\" alt=\"Drawing\" style=\"width: 1000px;\"/>  \n",
-    "\n",
-    "Run with:\n",
-    "<img src=\"img/run_reformat.png\" alt=\"Drawing\" style=\"width: 700px;\"/>  "
    ]
   },
   {
