--- a/lectures/Day_2.ipynb
+++ b/lectures/Day_2.ipynb
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1122,7 +1122,7 @@
     "\n",
     "outfile = \"../files/output/length_of_dna_sequence.txt\"\n",
     "with open(outfile, \"w\") as file:\n",
-    "    file.write(\"Length of DNA sequence:\" + str(total_count))"
+    "    file.write(\"Length of DNA sequence: \" + str(seqlength))"
    ]
   },
   {
