--- a/lectures/Day_3.ipynb
+++ b/lectures/Day_3.ipynb
@@ -575,7 +575,7 @@
    "source": [
     "\n",
     "\n",
-    "### What is the difference between a `function` and a `method`?\n",
+    "### What is the difference of a `function` and a `method`?\n",
     "| __Function__                      | __Method__                                                |\n",
     "|-------------------------------|-------------------------------------------------------|\n",
     "| Standalone block of code      | Function associated with an object                    |\n",
@@ -1637,7 +1637,7 @@
    "source": [
     "## Session 2: \n",
     "- How to define your own function\n",
-    "- How we pass argument from the command line to the Python script - sys.argv\n",
+    "- How we pass arguments from the command line to the Python script - sys.argv\n",
     "- String formatting"
    ]
   },
@@ -1659,8 +1659,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 142,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1670,7 +1671,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variant A is a non-target variant.\n"
+      "Variant AG is active and expressed.\n"
      ]
     }
    ],
@@ -1696,7 +1697,7 @@
     }
    },
    "source": [
-    "#### Syntax of function\n",
+    "### Syntax of function\n",
     "```python\n",
     "def function_name(arg1, arg2, ...):\n",
     "    # Block of code\n",
@@ -1705,9 +1706,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note: live coding to define the function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variant AG is active and expressed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use nested conditionals to categorize genetic variants based on multiple attributes.\n",
+    "genotype = \"AG\"\n",
+    "phenotype = \"expressed\"\n",
+    "if genotype == \"AG\":\n",
+    "    # Only check phenotype if genotype is \"AG\"\n",
+    "    if phenotype == \"expressed\":\n",
+    "        print(\"Variant \" + genotype + \" is active and expressed.\")\n",
+    "    else:\n",
+    "        print(\"Variant \" + genotype + \" is active but not expressed.\")\n",
+    "else:\n",
+    "    print(\"Variant \" + genotype + \" is a non-target variant.\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1735,8 +1784,9 @@
    "cell_type": "code",
    "execution_count": 135,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -1773,7 +1823,7 @@
     }
    },
    "source": [
-    "#### Syntax of function\n",
+    "### Syntax of function\n",
     "```python\n",
     "def function_name(arg1, arg2, ...):\n",
     "    # Block of code\n",
@@ -1798,6 +1848,41 @@
    "source": [
     "result = check_geno_pheno(\"A\", \"expressed\")\n",
     "print(\"result = \", result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note: live coding to modify the following code, so it return the message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# re-define this function so that it return a meaningful value\n",
+    "def check_geno_pheno(genotype, phenotype):\n",
+    "    if genotype == \"AG\":\n",
+    "        # Only check phenotype if genotype is \"AG\"\n",
+    "        if phenotype == \"expressed\":\n",
+    "            print(\"Variant \" + genotype + \" is active and expressed.\")\n",
+    "        else:\n",
+    "            print(\"Variant \" + genotype + \" is active but not expressed.\")\n",
+    "    else:\n",
+    "        print(\"Variant \" + genotype + \" is a non-target variant.\")\n",
+    "    \n",
+    "check_geno_pheno(\"AG\", \"expressed\")"
    ]
   },
   {
@@ -1828,34 +1913,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# redefine the function so that it return a meaningful value\n",
-    "def check_geno_pheno(genotype, phenotype):\n",
-    "    if genotype == \"AG\":\n",
-    "        # Only check phenotype if genotype is \"AG\"\n",
-    "        if phenotype == \"expressed\":\n",
-    "            print(\"Variant \" + genotype + \" is active and expressed.\")\n",
-    "        else:\n",
-    "            print(\"Variant \" + genotype + \" is active but not expressed.\")\n",
-    "    else:\n",
-    "        print(\"Variant \" + genotype + \" is a non-target variant.\")\n",
-    "    \n",
-    "check_geno_pheno(\"AG\", \"expressed\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 140,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -1875,7 +1937,12 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1920,8 +1987,9 @@
     "### 5 min exercise\n",
     "\n",
     "Write a function that calculate the length of sequence\n",
-    "- input parameter: sequence (string)\n",
-    "- reutrn: length"
+    "- Name of the function, `get_seq_len`\n",
+    "- Input parameter: `sequence` (String)\n",
+    "- Return value: `length` (Int)"
    ]
   },
   {
@@ -1932,11 +2000,43 @@
     }
    },
    "source": [
-    "## Summary\n",
+    "## How to pass arguments to Python script from the command line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note: yesterday we talked about how to read data from a file and showed this example.\n",
+    "Now we will switch to a terminal "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "seqfile = \"../files/one_dna_sequence.fa\"\n",
     "\n",
-    "- A function is a block of organized, reusable code that is used to perform a single, related action\n",
-    "- Variables within a function are local variables\n",
-    "- Functions can be organized in separate files and imported to the main code"
+    "with open(seqfile, \"r\") as file:\n",
+    "    seqlength = 0\n",
+    "    for line in file:\n",
+    "        line = line.strip()\n",
+    "        if not line.startswith(\">\"):\n",
+    "            seqlength += len(line)\n",
+    "\n",
+    "outfile = \"../files/output/length_of_dna_sequence.txt\"\n",
+    "with open(outfile, \"w\") as file:\n",
+    "    file.write(\"Length of DNA sequence: \" + str(seqlength))"
    ]
   },
   {
@@ -1947,14 +2047,12 @@
     }
    },
    "source": [
-    "## NEW TOPIC: `sys.argv`\n",
-    "\n",
-    "- Avoid hardcoding the filename in the code\n",
-    "- Easier to re-use code for different input files\n",
-    "- Uses command-line arguments\n",
-    "- Input is list of strings:\n",
+    "### `sys.argv`\n",
+    "- `sys.argv` is a list in the `sys` module, it contains the command line arguments passed to the script\n",
     "    - Position 0: the program name\n",
-    "    - Position 1: the first argument"
+    "    - Position 1: the first argument\n",
+    "    - Position 2: the second argument\n",
+    "    - etc"
    ]
   },
   {
@@ -1965,20 +2063,117 @@
     }
    },
    "source": [
-    "<b>The `sys.argv` function</b>\n",
+    "### How to use it\n",
+    "```python\n",
+    "import sys\n",
     "\n",
-    "Python script called `print_argv.py`:"
+    "program_name = sys.argv[0]\n",
+    "arg1 = sys.argv[1] # index error if the first argument is not provided in the command\n",
+    "arg2 = sys.argv[2] # index error if the second argument is not provided in the command\n",
+    "```\n",
+    "\n",
+    "In Python, the `import` statement is used to include external modules and libraries into your current script or module."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "skip"
     }
    },
    "source": [
-    "<img src=\"img/argv_print.png\" alt=\"Drawing\" style=\"width: 300px;\"/> "
+    "Note: we will talk more about modules and how to use them tomorrow. Now we will switch to the terminal again"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Try out `sys.argv`\n",
+    "\n",
+    "Python script is called `print_argv.py` in the download folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Modify this code so that it takes command line arguments\n",
+    "seqfile = \"../files/one_dna_sequence.fa\"\n",
+    "\n",
+    "with open(seqfile, \"r\") as file:\n",
+    "    seqlength = 0\n",
+    "    for line in file:\n",
+    "        line = line.strip()\n",
+    "        if not line.startswith(\">\"):\n",
+    "            seqlength += len(line)\n",
+    "\n",
+    "outfile = \"../files/output/length_of_dna_sequence.txt\"\n",
+    "with open(outfile, \"w\") as file:\n",
+    "    file.write(\"Length of DNA sequence: \" + str(seqlength))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!/usr/bin/env python\n",
+    "# answer\n",
+    "import sys\n",
+    "\n",
+    "if len(sys.argv) > 2:\n",
+    "    seqfile = sys.argv[1]\n",
+    "    outfile = sys.argv[2]\n",
+    "else:\n",
+    "    print(\"USAGE: \" + sys.argv[0] + \" seqfile outfile\")\n",
+    "    sys.exit(1)\n",
+    "    \n",
+    "with open(seqfile, \"r\") as file:\n",
+    "    seqlength = 0\n",
+    "    for line in file:\n",
+    "        line = line.strip()\n",
+    "        if not line.startswith(\">\"):\n",
+    "            seqlength += len(line)\n",
+    "\n",
+    "# outfile = \"../files/output/length_of_dna_sequence.txt\"\n",
+    "with open(outfile, \"w\") as file:\n",
+    "    file.write(\"Length of DNA sequence: \" + str(seqlength))\n",
+    "print(\"Result has been output to \", outfile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: Can you answer, why we use argumetns from the command line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Why use arguments from the command line\n"
    ]
   },
   {
@@ -1989,40 +2184,8 @@
     }
    },
    "source": [
-    "Running the script with command line arguments as input:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Instead of:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "do:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "Run with:"
+    "- Avoid hardcoding the filename in the code\n",
+    "- Easier to re-use code for different input files"
    ]
   },
   {
@@ -2042,17 +2205,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variant AG is active and expressed.\n"
+     ]
+    }
+   ],
    "source": [
-    "title  = 'Toy Story'\n",
-    "rating = 10\n",
-    "print('The result is: ' + title + ' with rating: ' + str(rating))"
+    "genotype = \"AG\"\n",
+    "result = \"Variant \" + genotype + \" is active and expressed.\"\n",
+    "print(result)"
    ]
   },
   {
@@ -2072,17 +2243,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variant AG is active and expressed.\n"
+     ]
+    }
+   ],
    "source": [
-    "title  = 'Toy Story'\n",
-    "rating = 10\n",
-    "print(f'The result is: {title} with rating: {rating}')"
+    "genotype = \"AG\"\n",
+    "result = f\"Variant {genotype} is active and expressed.\"\n",
+    "print(result)"
    ]
   },
   {
@@ -2098,17 +2277,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variant AG is active and expressed.\n"
+     ]
+    }
+   ],
    "source": [
-    "title  = 'Toy Story'\n",
-    "rating = 10\n",
-    "print('The result is: {} with rating: {}'.format(title, rating))"
+    "genotype = \"AG\"\n",
+    "result = \"Variant {} is active and expressed.\".format(genotype)\n",
+    "print(result)"
    ]
   },
   {
@@ -2119,27 +2306,139 @@
     }
    },
    "source": [
+    "#### `f-strings\" formatting is recommended \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### It works for other data types as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of gene TP53 is 355\n"
+     ]
+    }
+   ],
+   "source": [
+    "gene = \"TP53\"\n",
+    "length = 355\n",
+    "print(f\"Length of gene {gene} is {length}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expression level of gene COX1 is 45.123253\n"
+     ]
+    }
+   ],
+   "source": [
+    "gene = \"COX1\"\n",
+    "exp_level = 45.123253\n",
+    "print(f\"Expression level of gene {gene} is {exp_level}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expression level of gene COX1 is 45.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Expression level of gene {gene} is {exp_level:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "__The ancient way (python 2)__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variant AG is active and expressed.\n"
+     ]
+    }
+   ],
    "source": [
-    "title  = 'Toy Story'\n",
-    "rating = 10\n",
-    "print('The result is: %s with rating: %s' % (title, rating))"
+    "genotype = \"AG\"\n",
+    "result = \"Variant %s is active and expressed.\"%(genotype)\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Summary\n",
+    "\n",
+    "- A function is a block of organized, reusable code that is used to perform a single, related action\n",
+    "- Use sys.argv to deal with arguments passed to the python script from the command line\n",
+    "- `f-strings` formatting is a convenient and recommended way to format the string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Day 3, Exercise 2\n",
     "- take a short break after the exercise\n",
